feat: Replace Node.js Jenkins MCP server with Python-based jenkins-mcp-enterprise.

--- a/chatbot-integrations/Dockerfile
+++ b/chatbot-integrations/Dockerfile
@@ -12,7 +12,14 @@ COPY package*.json ./
 # Install only production dependencies if possible, but we need dev for some tools? 
 # For now, stick to simple install but ensure we clean cache if needed.
 # Since it's a proxy, standard install is fine.
+# Install Node.js dependencies
 RUN npm ci --only=production
+
+# Install Python and dependencies
+RUN apk add --no-cache python3 py3-pip git && \
+    python3 -m venv /app/venv && \
+    /app/venv/bin/pip install --upgrade pip && \
+    /app/venv/bin/pip install --no-cache-dir --timeout 1000 git+https://github.com/Jordan-Jarvis/jenkins-mcp-enterprise
 
 # Copy source
 COPY . .
