chore: migrate Dockerfile from Alpine to Slim, install CPU-only PyTorch, and correct app directory permissions.

--- a/chatbot-integrations/Dockerfile
+++ b/chatbot-integrations/Dockerfile
@@ -1,37 +1,36 @@
-# Use specific version for reproducibility
-FROM node:20-alpine
+FROM node:20-slim
 
-# Install dumb-init to handle PID 1 signals correctly
-RUN apk add --no-cache dumb-init
+# Install system dependencies including dumb-init and python
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    dumb-init \
+    python3 \
+    python3-venv \
+    python3-pip \
+    git \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
-# Optimize layer caching: copy deps first
 COPY package*.json ./
 
-# Install only production dependencies if possible, but we need dev for some tools? 
-# For now, stick to simple install but ensure we clean cache if needed.
-# Since it's a proxy, standard install is fine.
 # Install Node.js dependencies
 RUN npm ci --only=production
 
-# Install Python and dependencies
-RUN apk add --no-cache python3 py3-pip git && \
-    python3 -m venv /app/venv && \
+# Install Python dependencies in a venv
+# Install CPU-only torch to save space and time
+RUN python3 -m venv /app/venv && \
     /app/venv/bin/pip install --upgrade pip && \
     /app/venv/bin/pip install --no-cache-dir torch --index-url https://download.pytorch.org/whl/cpu && \
     /app/venv/bin/pip install --no-cache-dir --timeout 1000 git+https://github.com/Jordan-Jarvis/jenkins-mcp-enterprise
 
-# Copy source
 COPY . .
 
-# Use non-root user for security
+# Fix permissions for the node user
+RUN chown -R node:node /app
+
 USER node
 
 EXPOSE 3009
 
-# Use dumb-init
 ENTRYPOINT ["/usr/bin/dumb-init", "--"]
-
-# Execute directly to avoid shell limitations
 CMD ["node", "server.js"]
