Working model - baseline

--- a/chatbot-integrations/.env
+++ b/chatbot-integrations/.env
@@ -1,4 +1,4 @@
-JENKINS_URL="http://localhost:8080"
+JENKINS_URL="http://chatbot-assistant-jenkins-1:8080"
 JENKINS_USER="admin"
 JENKINS_TOKEN="1145887e02edabd66d1ef00f2c5acdb67a"
 PORT=3009
