--- a/chatbot-integrations/Dockerfile
+++ b/chatbot-integrations/Dockerfile
@@ -1,36 +1,26 @@
-FROM node:20-slim
+FROM node:20-alpine
 
-# Install system dependencies including dumb-init and python
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    dumb-init \
-    python3 \
-    python3-venv \
-    python3-pip \
-    git \
-    && rm -rf /var/lib/apt/lists/*
+# Install dumb-init to handle PID 1 signals correctly
+RUN apk add --no-cache dumb-init
 
 WORKDIR /app
 
+# Optimize layer caching: copy deps first
 COPY package*.json ./
 
 # Install Node.js dependencies
 RUN npm ci --only=production
 
-# Install Python dependencies in a venv
-# Install CPU-only torch to save space and time
-RUN python3 -m venv /app/venv && \
-    /app/venv/bin/pip install --upgrade pip && \
-    /app/venv/bin/pip install --no-cache-dir torch --index-url https://download.pytorch.org/whl/cpu && \
-    /app/venv/bin/pip install --no-cache-dir --timeout 1000 git+https://github.com/Jordan-Jarvis/jenkins-mcp-enterprise
-
+# Copy source
 COPY . .
 
-# Fix permissions for the node user
-RUN chown -R node:node /app
-
+# Use non-root user for security
 USER node
 
 EXPOSE 3009
 
+# Use dumb-init
 ENTRYPOINT ["/usr/bin/dumb-init", "--"]
+
+# Execute directly to avoid shell limitations
 CMD ["node", "server.js"]
