--- a/chatbot-integrations/unified-mcp/package.json
+++ b/chatbot-integrations/unified-mcp/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "grafana-mcp",
+    "name": "unified-mcp-server",
     "version": "1.0.0",
-    "description": "Read-Only Grafana MCP Server",
+    "description": "Unified DevOps MCP Server",
     "main": "dist/server.js",
     "scripts": {
         "build": "tsc",
