--- a/chatbot-integrations/unified-mcp/package.json
+++ b/chatbot-integrations/unified-mcp/package.json
@@ -9,6 +9,7 @@
         "dev": "ts-node src/server.ts"
     },
     "dependencies": {
+        "@elastic/elasticsearch": "^8.13.0",
         "@modelcontextprotocol/sdk": "^1.0.1",
         "axios": "^1.6.0",
         "cors": "^2.8.5",
