feat: Standardize integration configurations to an instances array with `apiToken` and internal service URLs, and simplify Docker Compose config mounts.

--- a/chatbot-integrations/unified-mcp/config/bitbucket.config.json
+++ b/chatbot-integrations/unified-mcp/config/bitbucket.config.json
@@ -1,13 +1,10 @@
 {
-    "bitbucket_url": "https://bitbucket.example.com",
-    "username": "admin",
-    "app_password": "password",
     "instances": [
         {
             "name": "Production Bitbucket",
-            "url": "https://bitbucket.prod.example.com",
+            "baseUrl": "http://bitbucket:7990",
             "username": "admin",
-            "app_password": "prod-password"
+            "apiToken": "admin"
         }
     ]
 }
