--- a/chatbot-integrations/unified-mcp/config/elasticsearch.config.json
+++ b/chatbot-integrations/unified-mcp/config/elasticsearch.config.json
@@ -1,9 +1,10 @@
 {
-    "elasticsearch_url": "http://elasticsearch:9200",
     "instances": [
         {
             "name": "Production Elastic",
-            "url": "http://elastic.prod.example.com"
+            "node": "http://elasticsearch:9200",
+            "username": "elastic",
+            "apiToken": "password"
         }
     ]
 }
