--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - mcp-server
     networks:
       - app-network
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
 
   mcp-server:
     build:
