--- a/nginx.conf
+++ b/nginx.conf
@@ -9,11 +9,16 @@ server {
     }
 
     # Proxy API requests to the MCP Server
+    client_max_body_size 100M;
     location /api/ {
         proxy_pass http://mcp-server:3009/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_read_timeout 3600s;
+        proxy_connect_timeout 3600s;
+        proxy_send_timeout 3600s;
+        keepalive_timeout 3600s;
     }
 }
