--- a/chatbot-integrations/unified-mcp/package.json
+++ b/chatbot-integrations/unified-mcp/package.json
@@ -11,10 +11,12 @@
     "dependencies": {
         "@elastic/elasticsearch": "^8.13.0",
         "@modelcontextprotocol/sdk": "^1.0.1",
+        "@types/pg": "^8.16.0",
         "axios": "^1.6.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "pg": "^8.16.3",
         "winston": "^3.13.0",
         "zod": "^3.22.4"
     },
